disable semver checks for initial release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  publish_lib:
+  publish:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -14,10 +14,10 @@ jobs:
       - name: Use cached dependencies
         uses: Swatinem/rust-cache@v2
 
-      - name: Check semver
-        run: |
-          cargo install cargo-semver-checks --locked
-          cargo semver-checks check-release
+      # - name: Check semver
+      #   run: |
+      #     cargo install cargo-semver-checks --locked
+      #     cargo semver-checks check-release
 
       - name: Install cargo-release
         run: cargo install cargo-release
