--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "resend-rs"
 description = "A very minimal Resend client for sending emails."
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 repository = "https://github.com/AntoniosBarotsis/resend-rs"
 license = "GPL-3.0"
@@ -12,5 +12,5 @@ license = "GPL-3.0"
 async = []
 
 [dependencies]
-reqwest = { version = "0.11.18", features = ["blocking"] }
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
 thiserror = "1.0.43"
