--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -62,8 +62,8 @@ rustflags = [
     "-Wclippy::same_functions_in_if_condition",
     "-Wclippy::semicolon_if_nothing_returned",
     "-Wclippy::single_match_else",
-    "-Wclippy::string_add_assign",
-    "-Wclippy::string_add",
+    "-Aclippy::string_add_assign",
+    "-Aclippy::string_add",
     "-Wclippy::string_lit_as_bytes",
     "-Wclippy::string_to_string",
     "-Wclippy::trait_duplication_in_bounds",
@@ -119,5 +119,5 @@ rustflags = [
     "-Wclippy::needless_pass_by_value",
     "-Wclippy::similar_names",
     "-Wclippy::uninlined_format_args",
-    "-Wclippy::unwrap_or_else_default",
+    "-Wclippy::unwrap_or_default",
 ]
