--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,34 @@
+# https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [package]
 name = "resend-rs"
-description = "A very minimal Resend client for sending emails."
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
-repository = "https://github.com/AntoniosBarotsis/resend-rs"
 license = "GPL-3.0"
+readme = "./README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Antonios Barotsis <antonios.barotsis@pm.me>"]
+repository = "https://github.com/AntoniosBarotsis/resend-rs"
+homepage = "https://github.com/AntoniosBarotsis/resend-rs"
+documentation = "https://docs.rs/resend-rs"
+
+categories = ["email", "web-programming"]
+keywords = ["email", "resend"]
+description = "A minimal Resend client."
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-async = []
+default = ["rustls-tls"]
+blocking = ["reqwest/blocking"]
+
+rustls-tls = ["reqwest/rustls-tls"]
+native-tls = ["reqwest/rustls-tls"]
 
 [dependencies]
-reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
-thiserror = "1.0.43"
+reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = { version = "1.0.115", features = [] }
+thiserror = { version = "1.0.58" }
