api keys, tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,18 +17,21 @@ keywords = ["email", "resend"]
 description = "A minimal Resend client."
 
 [package.metadata.docs.rs]
-all-features = true
+all-features = false
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = ["rustls-tls"]
-blocking = ["reqwest/blocking"]
 
+blocking = ["reqwest/blocking"]
 rustls-tls = ["reqwest/rustls-tls"]
-native-tls = ["reqwest/rustls-tls"]
+native-tls = ["reqwest/native-tls"]
 
 [dependencies]
 reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.115", features = [] }
-thiserror = { version = "1.0.58" }
+thiserror = { version = "1.0.58", features = [] }
+
+[dev-dependencies]
+tokio = { version = "1.37.0", features = ["macros", "test-util"] }
