--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.115", features = [] }
 thiserror = { version = "1.0.58", features = [] }
+url = { version = "2.5.0", features = [] }
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["macros", "test-util"] }
