--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Test
         run: cargo --verbose t
+        env:
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
 
   lint:
     name: Lint
