--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,7 @@ jobs:
         run: cargo build --verbose
 
       - name: Test
-        run: cargo --verbose t
-        env:
-          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+        run: RESEND_API_KEY=${{ secrets.RESEND_API_KEY }} cargo --verbose t
 
   lint:
     name: Lint
