--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.115" }
 thiserror = { version = "1.0.58" }
 maybe-async = { version = "0.2.10" }
+ecow = { version = "0.2.2", features = ["serde"] }
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-thread"] }
