rate limit, rename svc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,15 +24,13 @@ native-tls = ["reqwest/native-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 
 [dependencies]
-reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
+reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
+tower = { version = "0.4.13", features = ["limit"] }
 serde = { version = "1.0.198", features = ["derive"] }
 ecow = { version = "0.2.2", features = ["serde"] }
 
-thiserror = { version = "1.0.58" }
+thiserror = { version = "1.0.59" }
 maybe-async = { version = "0.2.10" }
-
-# TODO: Rate & concurrency limit?
-# tower = { version = "0.4.13", features = ["limit"] }
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-thread"] }
