--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           rustup component add rustfmt
 
       - name: Run clippy
-        run: cargo clippy -- -Dwarnings
+        run: cargo clippy --all-features -- -Dwarnings
 
       - name: Run fmt
         run: cargo fmt --check
