Temporarily "fix" tests attempt 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
         run: cargo build --verbose
 
       - name: Test
-        run: RESEND_API_KEY=${{ secrets.RESEND_API_KEY }} cargo --verbose t
+        run: cargo --verbose t
+        env:
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
 
   lint:
     name: Lint
