--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Build & Tests
 
 on:
   push:
-  pull_request:
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -41,27 +41,3 @@ jobs:
         run: cargo --verbose t
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Use cached dependencies
-        uses: Swatinem/rust-cache@v2
-        with:
-          key: "ubuntu-22.04-x86_64-unknown-linux-gnu"
-
-      - name: Install clippy and rustfmt
-        run: |
-          rustup component add clippy
-          rustup component add rustfmt
-
-      - name: Run clippy
-        run: cargo clippy --all-features -- -Dwarnings
-
-      - name: Run fmt
-        run: cargo fmt --check
