--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ name = "resend-rs"
 version = "0.5.0"
 edition = "2021"
 
-license = "GPL-3.0"
+license = "MIT"
 readme = "./README.md"
 
 authors = ["Antonios Barotsis <antonios.barotsis@proton.me>"]
