--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ ecow = { version = "0.2.2", features = ["serde"] }
 thiserror = { version = "1.0.59" }
 maybe-async = { version = "0.2.10" }
 governor = "0.6.3"
+rand = "0.8.5"
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-thread"] }
