--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "resend-rs"
-version = "0.8.0"
+version = "0.8.1"
 edition = "2021"
 
 license = "MIT"
@@ -34,4 +34,5 @@ governor = "0.6.3"
 rand = "0.8.5"
 
 [dev-dependencies]
+serde_json = "1.0.120"
 tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-thread"] }
