--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,6 @@ governor = "0.6.3"
 rand = "0.8.5"
 
 [dev-dependencies]
+jiff = { version = "0.1.4", features = ["serde"] }
 serde_json = "1.0.120"
 tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-thread"] }
