Use shared test runtime

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ tokio = { version = "1.37.0", features = ["macros", "test-util", "rt-multi-threa
 axum = "0.7.9"
 svix = "1.42.0"
 http-body-util = "0.1.2"
+tokio-shared-rt = "0.1.0"
