--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "resend-rs"
-version = "0.11.2"
+version = "0.12.0"
 edition = "2021"
 
 license = "MIT"
@@ -32,6 +32,7 @@ thiserror = { version = "2.0.11" }
 maybe-async = { version = "0.2.10" }
 governor = "0.8.1"
 rand = "0.9.0"
+getrandom = { version = "0.3", features = ["wasm_js"] }
 serde_json = "1.0.139"
 
 [dev-dependencies]
