--- a/examples/cf-worker/Cargo.toml
+++ b/examples/cf-worker/Cargo.toml
@@ -23,4 +23,4 @@ console_error_panic_hook = { version = "0.1.1" }
 governor = "0.8.1"
 rand = "0.9.0"
 getrandom = { version = "0.3", features = ["wasm_js"] }
-resend-rs = { path = "../../../resend-rs" }
+resend-rs = "0.12.0"
