--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ env:
   CARGO_TERM_COLOR: always
 
 concurrency:
-  group: ${{ github.ref }}
+  group: lint/${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
