--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -102,12 +102,6 @@ rustflags = [
     "-Wunsafe_code",
     "-Wunsafe_op_in_unsafe_fn",
     "-Wunstable_features",
-    "-Wunused_extern_crates",
-    "-Wunused_import_braces",
-    "-Wunused_lifetimes",
-    "-Wunused_macro_rules",
-    "-Wunused_qualifications",
-    "-Wunused_results",
     "-Aclippy::module-name-repetitions",
     "-Wvariant_size_differences",
     "-Wclippy::manual_let_else",
@@ -120,4 +114,50 @@ rustflags = [
     "-Wclippy::uninlined_format_args",
     "-Wclippy::unwrap_or_default",
     "-Wclippy::clone_on_ref_ptr",
+    "-Dambiguous-glob-reexports",
+    "-Dclashing-extern-declarations",
+    "-Dconst-item-mutation",
+    "-Ddangling-pointers-from-temporaries",
+    "-Dderef-nullptr",
+    "-Ddrop-bounds",
+    "-Dfuture-incompatible",
+    "-Dhidden-glob-reexports",
+    "-Dimproper-ctypes",
+    "-Dimproper-ctypes-definitions",
+    "-Dinvalid-from-utf8",
+    "-Dinvalid-macro-export-arguments",
+    "-Dinvalid-nan-comparisons",
+    "-Dinvalid-reference-casting",
+    "-Dinvalid-value",
+    "-Dopaque-hidden-inferred-bound",
+    "-Doverlapping-range-endpoints",
+    "-Dsuspicious-double-ref-op",
+    "-Dunconditional-recursion",
+    "-Dunexpected-cfgs",
+    "-Dunnameable-test-items",
+    "-Dunsafe-op-in-unsafe-fn",
+    "-Dunstable-syntax-pre-expansion",
+    "-Wkeyword-idents",
+    "-Wlet-underscore",
+    "-Wmacro-use-extern-crate",
+    "-Wmeta-variable-misuse",
+    "-Wmissing-abi",
+    "-Wmissing-copy-implementations",
+    "-Wmissing-debug-implementations",
+    "-Wnoop-method-call",
+    "-Wsingle-use-lifetimes",
+    "-Wtrivial-casts",
+    "-Wtrivial-numeric-casts",
+    "-Wunreachable-pub",
+    "-Wunused",
+    "-Wunused_extern_crates",
+    "-Wunused_import_braces",
+    "-Wunused_lifetimes",
+    "-Wunused_macro_rules",
+    "-Wunused_qualifications",
+    "-Wunused_results",
+    "-Wunused-import-braces",
+    "-Wunused-lifetimes",
+    "-Wunused-qualifications",
+    "-Wvariant-size-differences",
 ]
