--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "resend-rs"
-version = "0.13.0"
+version = "0.14.0"
 edition = "2024"
 
 license = "MIT"
@@ -37,7 +37,11 @@ serde_json = "1.0.140"
 
 [dev-dependencies]
 jiff = { version = "0.2.9", features = ["serde"] }
-tokio = { version = "1.44.2", features = ["macros", "test-util", "rt-multi-thread"] }
+tokio = { version = "1.44.2", features = [
+  "macros",
+  "test-util",
+  "rt-multi-thread",
+] }
 # Used in examples
 axum = "0.8.3"
 svix = "1.64.1"
