--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ tokio = { version = "1.44.2", features = [
   "test-util",
   "rt-multi-thread",
 ] }
+strum = { version = "0.27", features = ["derive"] }
+scraper = "0.23.1"
+regex = "1.11.1"
 # Used in examples
 axum = "0.8.3"
 svix = "1.64.1"
