--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "resend-rs"
-version = "0.15.0"
+version = "0.15.1-rc.0"
 edition = "2024"
 
 license = "MIT"
@@ -50,3 +50,4 @@ axum = "0.8.3"
 svix = "1.64.1"
 http-body-util = "0.1.3"
 tokio-shared-rt = "0.1.0"
+anyhow = "1.0.98"
