--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ documentation = "https://docs.rs/resend-rs"
 
 categories = ["email", "web-programming"]
 keywords = ["email", "resend"]
-description = "A minimal Resend client."
+description = "Resend's Official Rust SDK."
 
 [features]
 default = ["native-tls"]
@@ -31,7 +31,7 @@ ecow = { version = "0.2.4", features = ["serde"] }
 thiserror = { version = "2.0.12" }
 maybe-async = { version = "0.2.10" }
 governor = "0.10.0"
-rand = "0.9.1"
+rand = "0.9.2"
 getrandom = { version = "0.3.3", features = ["wasm_js"] }
 serde_json = "1.0.140"
 
