--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "resend-rs"
-version = "0.18.0"
+version = "0.19.0-beta.0"
 edition = "2024"
 
 license = "MIT"
@@ -25,10 +25,10 @@ native-tls = ["reqwest/native-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 
 [dependencies]
-reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
-serde = { version = "1.0.225", features = ["derive"] }
+reqwest = { version = "0.12", default-features = false, features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
 ecow = { version = "0.2.4", features = ["serde"] }
-thiserror = { version = "2.0.16" }
+thiserror = { version = "2.0" }
 maybe-async = { version = "0.2.10" }
 governor = "0.10.0"
 rand = "0.9.2"
@@ -44,10 +44,10 @@ tokio = { version = "1.45.0", features = [
 ] }
 strum = { version = "0.27", features = ["derive"] }
 scraper = "0.24.0"
-regex = "1.11.2"
+regex = "1.12.2"
 # Used in examples
-axum = "0.8.3"
-svix = "1.76.1"
+axum = "0.8.6"
+svix = "1.77.0"
 http-body-util = "0.1.3"
 tokio-shared-rt = "0.1.0"
-anyhow = "1.0.98"
+anyhow = "1.0"
